// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compartments must display the correct data 1`] = `
Object {
  "addFilterArgsActionCreator": [Function],
  "filterArgs": Array [
    [Function],
  ],
  "history": Object {
    "action": "POP",
    "block": [Function],
    "createHref": [Function],
    "go": [Function],
    "goBack": [Function],
    "goForward": [Function],
    "length": 1,
    "listen": [Function],
    "location": Object {
      "hash": "",
      "pathname": "/",
      "search": "",
      "state": undefined,
    },
    "push": [Function],
    "replace": [Function],
  },
  "location": Object {
    "hash": "",
    "pathname": "/",
    "search": "",
    "state": undefined,
  },
  "match": Object {
    "isExact": true,
    "params": Object {},
    "path": "/",
    "url": "/",
  },
  "module": "Pregnancy",
  "noRisk": 0,
  "permissionLevel": 0,
  "redAlert": 0,
  "risk": 0,
  "staticContext": undefined,
  "title": "Total Pregnancies due in 1 week",
  "totalNumber": 0,
  "userLocationId": "d1865325-11e6-4e39-817b-e676c1affecf",
}
`;

exports[`Compartments must display the correct data 2`] = `
Object {
  "addFilterArgsActionCreator": [Function],
  "filterArgs": Array [
    [Function],
  ],
  "history": Object {
    "action": "POP",
    "block": [Function],
    "createHref": [Function],
    "go": [Function],
    "goBack": [Function],
    "goForward": [Function],
    "length": 1,
    "listen": [Function],
    "location": Object {
      "hash": "",
      "pathname": "/",
      "search": "",
      "state": undefined,
    },
    "push": [Function],
    "replace": [Function],
  },
  "location": Object {
    "hash": "",
    "pathname": "/",
    "search": "",
    "state": undefined,
  },
  "match": Object {
    "isExact": true,
    "params": Object {},
    "path": "/",
    "url": "/",
  },
  "module": "Pregnancy",
  "noRisk": 0,
  "permissionLevel": 0,
  "redAlert": 0,
  "risk": 2,
  "staticContext": undefined,
  "title": "Total Pregnancies due in 2 weeks",
  "totalNumber": 2,
  "userLocationId": "d1865325-11e6-4e39-817b-e676c1affecf",
}
`;

exports[`Compartments must display the correct data 3`] = `
Object {
  "addFilterArgsActionCreator": [Function],
  "filterArgs": Array [
    [Function],
  ],
  "history": Object {
    "action": "POP",
    "block": [Function],
    "createHref": [Function],
    "go": [Function],
    "goBack": [Function],
    "goForward": [Function],
    "length": 1,
    "listen": [Function],
    "location": Object {
      "hash": "",
      "pathname": "/",
      "search": "",
      "state": undefined,
    },
    "push": [Function],
    "replace": [Function],
  },
  "location": Object {
    "hash": "",
    "pathname": "/",
    "search": "",
    "state": undefined,
  },
  "match": Object {
    "isExact": true,
    "params": Object {},
    "path": "/",
    "url": "/",
  },
  "module": "Pregnancy",
  "noRisk": 0,
  "permissionLevel": 0,
  "redAlert": 0,
  "risk": 2,
  "staticContext": undefined,
  "title": "Total Pregnancies",
  "totalNumber": 2,
  "userLocationId": "d1865325-11e6-4e39-817b-e676c1affecf",
}
`;

exports[`Compartments must render correctly for NBC_AND_PNC module 1`] = `
Object {
  "addFilterArgsActionCreator": [Function],
  "filterArgs": Array [
    [Function],
  ],
  "history": Object {
    "action": "POP",
    "block": [Function],
    "createHref": [Function],
    "go": [Function],
    "goBack": [Function],
    "goForward": [Function],
    "length": 1,
    "listen": [Function],
    "location": Object {
      "hash": "",
      "pathname": "/",
      "search": "",
      "state": undefined,
    },
    "push": [Function],
    "replace": [Function],
  },
  "location": Object {
    "hash": "",
    "pathname": "/",
    "search": "",
    "state": undefined,
  },
  "match": Object {
    "isExact": true,
    "params": Object {},
    "path": "/",
    "url": "/",
  },
  "module": "NBC & PNC_CHILD",
  "noRisk": 0,
  "permissionLevel": 0,
  "redAlert": 0,
  "risk": 0,
  "staticContext": undefined,
  "title": "Total Newborn",
  "totalNumber": 0,
  "userLocationId": "d1865325-11e6-4e39-817b-e676c1affecf",
}
`;

exports[`Compartments must render correctly for NBC_AND_PNC module 2`] = `
Object {
  "addFilterArgsActionCreator": [Function],
  "filterArgs": Array [
    [Function],
  ],
  "history": Object {
    "action": "POP",
    "block": [Function],
    "createHref": [Function],
    "go": [Function],
    "goBack": [Function],
    "goForward": [Function],
    "length": 1,
    "listen": [Function],
    "location": Object {
      "hash": "",
      "pathname": "/",
      "search": "",
      "state": undefined,
    },
    "push": [Function],
    "replace": [Function],
  },
  "location": Object {
    "hash": "",
    "pathname": "/",
    "search": "",
    "state": undefined,
  },
  "match": Object {
    "isExact": true,
    "params": Object {},
    "path": "/",
    "url": "/",
  },
  "module": "NBC & PNC_WOMAN",
  "noRisk": 0,
  "permissionLevel": 0,
  "redAlert": 0,
  "risk": 2,
  "staticContext": undefined,
  "title": "Total Mothers in PNC",
  "totalNumber": 2,
  "userLocationId": "d1865325-11e6-4e39-817b-e676c1affecf",
}
`;

exports[`Compartments must render correctly for Nutrition module 1`] = `
Object {
  "addFilterArgsActionCreator": [Function],
  "filterArgs": Array [
    [Function],
  ],
  "history": Object {
    "action": "POP",
    "block": [Function],
    "createHref": [Function],
    "go": [Function],
    "goBack": [Function],
    "goForward": [Function],
    "length": 1,
    "listen": [Function],
    "location": Object {
      "hash": "",
      "pathname": "/",
      "search": "",
      "state": undefined,
    },
    "push": [Function],
    "replace": [Function],
  },
  "inappropriateFeeding": 0,
  "location": Object {
    "hash": "",
    "pathname": "/",
    "search": "",
    "state": undefined,
  },
  "match": Object {
    "isExact": true,
    "params": Object {},
    "path": "/",
    "url": "/",
  },
  "module": "Nutrition",
  "overweight": 0,
  "permissionLevel": 0,
  "staticContext": undefined,
  "stunting": 0,
  "title": "Total Children Under 5",
  "totalNumber": 0,
  "userLocationId": "d1865325-11e6-4e39-817b-e676c1affecf",
  "wasting": 0,
}
`;

exports[`Compartments must render correctly for Nutrition module 2`] = `
Object {
  "addFilterArgsActionCreator": [Function],
  "filterArgs": Array [
    [Function],
  ],
  "history": Object {
    "action": "POP",
    "block": [Function],
    "createHref": [Function],
    "go": [Function],
    "goBack": [Function],
    "goForward": [Function],
    "length": 1,
    "listen": [Function],
    "location": Object {
      "hash": "",
      "pathname": "/",
      "search": "",
      "state": undefined,
    },
    "push": [Function],
    "replace": [Function],
  },
  "inappropriateFeeding": 0,
  "location": Object {
    "hash": "",
    "pathname": "/",
    "search": "",
    "state": undefined,
  },
  "match": Object {
    "isExact": true,
    "params": Object {},
    "path": "/",
    "url": "/",
  },
  "module": "Nutrition",
  "overweight": 0,
  "permissionLevel": 0,
  "staticContext": undefined,
  "stunting": 0,
  "title": "Total Children Under 2",
  "totalNumber": 0,
  "userLocationId": "d1865325-11e6-4e39-817b-e676c1affecf",
  "wasting": 0,
}
`;

exports[`Compartments must render correctly for pregnancy module: compartment title 1`] = `
<h2
  id="compartment_title"
>
  Compartments
</h2>
`;

exports[`Compartments must render correctly for pregnancy module: subtitle 1`] = `
<p
  id="breadcrumb"
>
  <span
    id="breadcrumb-span"
  >
    Vietnam
  </span>
</p>
`;
